--- a/src/main/webapp/WEB-INF/pages/login.html
+++ b/src/main/webapp/WEB-INF/pages/login.html
@@ -15,7 +15,7 @@
   </head>
   
   <body style="font-family: Arial; font-size:smaller;" >
-    <form action="login.do" method="post" commandName="login" modelAttribute="login">
+    <form action="userlogin" method="post" commandName="login" modelAttribute="login">
     	 <table bgcolor="lightblue" align="center" style="border-collapse: collapse;" border="0" bordercolor="#006699" width="450">
     	<tr><td colspan="3" align="center">Login</td></tr>
     	<tr>
@@ -31,7 +31,7 @@
          <tr>
              <td colspan="2" align="right">
              <input type="submit" name="" value="Login">
-             <input type="button"  value="Regist" onclick="javascript:go('saveContact.do');">
+             <!-- <input type="button"  value="Regist" onclick="javascript:go('saveContact.do');"> -->
              </td>
              <td></td>
          </tr>
