work check and update

--- a/src/main/webapp/WEB-INF/pages/check.html
+++ b/src/main/webapp/WEB-INF/pages/check.html
@@ -13,7 +13,7 @@
 	-->
 </head>
 <body style="font-family: Arial; font-size:smaller;" >
-    <form action="check.do" method="post" commandName="check" modelAttribute="check">
+    <form action="workcheck" method="post" commandName="check" modelAttribute="check">
     	 <table bgcolor="lightblue" align="center" style="border-collapse: collapse;" border="0" bordercolor="#006699" width="450">
     	<tr><td colspan="3" align="center">check</td></tr>
     	<tr>
@@ -29,7 +29,7 @@
          </tr>
     	</table>
     </form>
-      <form action="updatefile.do" method="post" commandName="updatefile" modelAttribute="updatefile">
+      <form action="workupdate" method="post" commandName="updatefile" modelAttribute="updatefile">
     	 <table bgcolor="lightblue" align="center" style="border-collapse: collapse;" border="0" bordercolor="#006699" width="450">
     	<tr><td colspan="3" align="center">update_file</td></tr>
     	<tr>
