--- a/src/main/webapp/WEB-INF/pages/check.html
+++ b/src/main/webapp/WEB-INF/pages/check.html
@@ -29,6 +29,22 @@
          </tr>
     	</table>
     </form>
+    <form action="workcheckByteachid" method="post" commandName="check" modelAttribute="check">
+    	 <table bgcolor="lightblue" align="center" style="border-collapse: collapse;" border="0" bordercolor="#006699" width="450">
+    	<tr><td colspan="3" align="center">checkByteachid</td></tr>
+    	<tr>
+             <td width="100" align="right">Teacher ID</td>
+             <td width="150">
+             <input type="text" name="teachid" cssStyle="width:150; height:20"/></td>
+         </tr>
+         <tr>
+             <td colspan="2" align="right">             
+             		<input type="submit" name="" value="checkByteachid">
+             </td>
+             <td></td>
+         </tr>
+    	</table>
+    </form>
       <form action="workupdate" method="post" commandName="updatefile" modelAttribute="updatefile">
     	 <table bgcolor="lightblue" align="center" style="border-collapse: collapse;" border="0" bordercolor="#006699" width="450">
     	<tr><td colspan="3" align="center">update_file</td></tr>
